--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,18 @@ input.error {
   height: 5px;
   margin-top: -12px;
 }
+
+a:link {
+  color: red;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
+  text-decoration: none;
+}
